Played around with basic css styling

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             </div>
         </div>
         <div class="logo">
+            <!-- <img src="https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png"> -->
         </div>
-        <img src="https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png">
+        <!-- <img src="https://appacademy.github.io/styleguide/assets/logo/logo-emblem-black-1000.png"> -->
     </div>
 </body>
 
